--- a/08-sqlalchemy-challenge/climate_starter.ipynb
+++ b/08-sqlalchemy-challenge/climate_starter.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 163,
    "metadata": {
     "scrolled": true
    },
@@ -169,7 +169,8 @@
     {
      "data": {
       "text/plain": [
-       "[('2016-08-24', 0.08),\n",
+       "[('2016-08-23', 0.0),\n",
+       " ('2016-08-24', 0.08),\n",
        " ('2016-08-25', 0.08),\n",
        " ('2016-08-26', 0.0),\n",
        " ('2016-08-27', 0.0),\n",
@@ -529,6 +530,7 @@
        " ('2017-08-21', 0.0),\n",
        " ('2017-08-22', 0.0),\n",
        " ('2017-08-23', 0.0),\n",
+       " ('2016-08-23', 0.15),\n",
        " ('2016-08-24', 2.15),\n",
        " ('2016-08-25', 0.08),\n",
        " ('2016-08-26', 0.03),\n",
@@ -871,6 +873,7 @@
        " ('2017-07-29', 0.06),\n",
        " ('2017-07-30', 0.0),\n",
        " ('2017-07-31', 0.0),\n",
+       " ('2016-08-23', 0.05),\n",
        " ('2016-08-24', 2.28),\n",
        " ('2016-08-25', 0.0),\n",
        " ('2016-08-26', 0.02),\n",
@@ -1166,13 +1169,10 @@
        " ('2017-08-10', 0.0),\n",
        " ('2017-08-11', 0.0),\n",
        " ('2017-08-13', None),\n",
-       " ('2017-08-14', 0.01),\n",
-       " ('2017-08-15', 0.0),\n",
-       " ('2017-08-16', 0.0),\n",
        " ...]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1184,9 @@
     "      Measurement.prcp]\n",
     "\n",
     "last_12 = (session.query(*sel)\n",
-    " .filter(Measurement.date > '2016-08-23')\n",
+    " .filter(Measurement.date >= '2016-08-23')\n",
+    " .filter(Measurement.date <= '2017-08-23')\n",
+    "#  .group_by(Measurement.date) ### IF I DON'T DO THIS..then 2230 reults\n",
     " .all())\n",
     "\n",
     "last_12"
@@ -1192,8 +1194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 164,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1225,44 +1229,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-25</th>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-26</th>\n",
+       "      <th>2016-08-23</th>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-27</th>\n",
-       "      <td>0.00</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-28</th>\n",
-       "      <td>0.01</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>1.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-08-19</th>\n",
-       "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-20</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2017-08-21</th>\n",
-       "      <td>0.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2017-08-22</th>\n",
-       "      <td>0.50</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-08-23</th>\n",
+       "      <td>0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017-08-23</th>\n",
@@ -1270,28 +1274,28 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2223 rows × 1 columns</p>\n",
+       "<p>2230 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            prcp\n",
        "date            \n",
-       "2016-08-24  0.08\n",
-       "2016-08-25  0.08\n",
-       "2016-08-26  0.00\n",
-       "2016-08-27  0.00\n",
-       "2016-08-28  0.01\n",
+       "2016-08-23  0.00\n",
+       "2016-08-23   NaN\n",
+       "2016-08-23  1.79\n",
+       "2016-08-23  0.05\n",
+       "2016-08-23  0.15\n",
        "...          ...\n",
-       "2017-08-19  0.09\n",
-       "2017-08-20   NaN\n",
-       "2017-08-21  0.56\n",
-       "2017-08-22  0.50\n",
+       "2017-08-22  0.00\n",
+       "2017-08-23  0.00\n",
+       "2017-08-23  0.00\n",
+       "2017-08-23  0.08\n",
        "2017-08-23  0.45\n",
        "\n",
-       "[2223 rows x 1 columns]"
+       "[2230 rows x 1 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,31 +1304,46 @@
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
     "# Sort the dataframe by date\n",
     "last_12_df = pd.DataFrame(last_12)\n",
-    "last_12_df.sort_values(by='date', ascending=True)\n",
-    "last_12_df.set_index('date')"
+    "last_12_index = last_12_df.set_index('date')\n",
+    "last_12_sort = last_12_index.sort_values(by='date', ascending=True)\n",
+    "\n",
+    "last_12_sort\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "\n",
-    "# labels = ['2016-08-23', '2016-10-01', '2016-11-09', '2016-12-19', '2017-01-28', \n",
-    "#           '2017-03-09', '2017-04-18', '2017-05-31', '2017-07-10']\n",
+    "# ['2016-08-23', '2016-10-01', '2016-11-09', '2016-12-19', '2017-01-28', \n",
+    "# '2017-03-09', '2017-04-18', '2017-05-31', '2017-07-10']\n",
     "\n",
-    "df = pd.DataFrame(last_12_df, columns=['date', 'prcp'])\n",
+    "\n",
+    "# dates = [last_12_sort.iloc[::250, 0]]\n",
+    "\n",
+    "#             x_axis = np.arange(len(last_12_sort.index))\n",
+    "#             tick_locations = [value for value in x_axis]\n",
+    "\n",
+    "df = pd.DataFrame(last_12_sort, columns=['date', 'prcp'])\n",
     "df.set_index('date')\n",
-    "df.plot.bar()\n",
+    "ax = df.plot.bar(figsize=(20,5))\n",
+    "\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Inches')\n",
     "plt.tight_layout()\n",
-    "plt.xticks(rotation=90)\n",
-    "df.set_ticklabels(df.get_ticklabels()[::39])\n",
-    "# plt.xticks(labels, rotation='vertical')\n",
-    "plt.show()\n"
+    "\n",
+    "ax.set_xticks(last_12_sort[::250])\n",
+    "ax.set_xticklabels(last_12_sort.index[::250], rotation=90)\n",
+    "\n",
+    "                # plt.xticks(tick_locations, last_12_sort.index, rotation=\"vertical\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1413,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1441,7 @@
        "[('USC00519281', 54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,35 +1462,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('USC00519281', 2772),\n",
-       " ('USC00519397', 2724),\n",
-       " ('USC00513117', 2709),\n",
-       " ('USC00519523', 2669),\n",
-       " ('USC00516128', 2612),\n",
-       " ('USC00514830', 2202),\n",
-       " ('USC00511918', 1979),\n",
-       " ('USC00517948', 1372),\n",
-       " ('USC00518838', 511)]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Choose the station with the highest number of temperature observations.\n",
     "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
-    "(session.query(Measurement.station, func.count(Measurement.tobs))\n",
-    " .group_by(Measurement.station)\n",
-    " .order_by(func.count(Measurement.tobs).desc())\n",
-    " .all())"
+    "last_12_temp = (session.query(Measurement.station, Measurement.tobs)\n",
+    "                .filter(Measurement.date > '2016-08-23')\n",
+    "                .filter(Measurement.station == 'USC00519281')\n",
+    "                .all())\n",
+    "\n",
+    "# NEEED TO DO histogram\n",
+    "\n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### Plot the results as a histogram with bins=12.\n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### \n",
+    "#### "
    ]
   },
   {
@@ -1483,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
